# Team_5

./: CMakeLists.txt  Doxyfile.in  README.md  Simulation.cpp  main.cpp
res/: frequencies.txt
src/: Allele.cpp  Allele.hpp  Experiment.cpp  Experiment.hpp  Generation.cpp  Generation.hpp  Simulation.cpp  Simulation.hpp  main.cpp
test/test/: genetics_unittest.cpp  googlestests.cpp
